@@ -1,5 +1,3 @@
 AUX configure.py.patch 1727 RMD160 31802058d0b0488264cdbcfeebd7ce9aff250957 SHA1 df4fee27f1486422b25d0072cfc388b207814c8f SHA256 06ee44a9fe43615b6bfada4aa7294303c016fd7c378ddf537823e33546306926
-DIST PyQt-x11-gpl-4.5.2-snapshot-20090706.tar.gz 6841812 RMD160 bf5c29de42fd42e891e91eb2eccdf16589b55ced SHA1 363f303b1ccf340b32bb7f6224dcb4cff75c05fa SHA256 ebd91375ea12929608c5ef9fdd86c37cef01a5cb1a8c3929ac3089473b648fc4
-EBUILD PyQt4-4.5.2_pre20090706.ebuild 2997 RMD160 47de189fc0d88ce9f3587b1df6b3522fc2fa591f SHA1 b2ec44dc6a7f13dd3aa3050a625a4c93b5abc354 SHA256 40c0ecbdf6f85e0c3cb61dbf7c245d041e6887b34f9dba16c3c76e8555c18632
-MISC ChangeLog 7132 RMD160 98a0d4b46ed994b485959733abccf701114621d7 SHA1 e8ecbe112b8c5cdb49390943d8aafd5b4b031981 SHA256 a0bb0fcd96246a0395774f67e224b836294950308e3a8e6713f057fb91119061
+MISC ChangeLog 7243 RMD160 95c6fcb4b67ab202f1d60dacc643f91dd03856b8 SHA1 bb413383db3406c1e7cb3ced00da4cbc7511b4f2 SHA256 64d0b11140fdaef49ac47221a390c9724363b9dcb7107d0d242e32a098474a8c
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
