@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
+  -PyQt4-4.5.2_pre20090706.ebuild:
+  Remove old snapshot
+
 *PyQt4-4.5.2_pre20090706 (08 Jul 2009)
 
   08 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
